# modernC-

./: .gitignore  LICENSE
1_ops/: data.txt  readFile.cpp
2_concurrency/: main  main.cpp
Classes/: Interface.cpp  a.out  constructors2.cpp  file.cpp  main  main.cpp  myFile
STL/Concurrency/2_concurrency/: main.cpp
STL/Concurrency/Threads/: thread  thread101.cpp
backend/MyUsers/: config.h
backend/Users_DB/: .gitignore  CMakeLists.txt  config.h
backend/Users_DB/src/: main.cpp  myProject
backend/employees/: CMakeLists.txt  main.cpp
backend/networking/: myProject
backend/networking/boost/pandaNet/pandaServer/: CMakeLists.txt
backend/networking/boost/web_client/: web_client.cpp
basics/car/: carAPI.cpp  first.cpp  myCars.cpp  second.cpp
basics/networking/boost/myServer/: CMakeLists.txt  myServer.cpp
basics/networking/boost/pandaNet/pandaClient/: CMakeLists.txt  main.cpp
basics/networking/boost/pandaNet/pandaServer/: main.cpp
basics/networking/boost/web_client/: CMakeLists.txt
fileSystem/1_ops/: main  readFile
filters/eigen-matrix/: CMakeLists.txt
filters/eigen-matrix/include/: GenerateData.h
filters/eigen-matrix/src/: GenerateData.cpp  main.cpp
users_DB/: CMakeLists.txt  config.h
users_DB/MySQLHandler/: MySQLHandler.cpp  MySQLHandler.h
users_DB/MySQLHandler/connectToDatabase/: connectToDatabase.cpp  connectToDatabase.h
users_DB/addRecord/: addRecord.cpp  addRecord.h
users_DB/deleteRecord/: deleteRecord.cpp  deleteRecord.h
users_DB/include/: main.h
users_DB/readRecord/: readRecord.cpp  readRecord.h
users_DB/src/: main.cpp
users_DB/updateRecord/: updateRecord.cpp  updateRecord.h
